Stop overflow of pane

--- a/kahuna/public/js/components/gr-feature-switch-panel/gr-feature-switch-panel.module.css
+++ b/kahuna/public/js/components/gr-feature-switch-panel/gr-feature-switch-panel.module.css
@@ -93,6 +93,7 @@ th {
 }
 
 .infoPane {
+  box-sizing: border-box;
   border-bottom: 1px solid #565656;
   width: 100%;
   display: flex;
